# 2023_Hack.lu

./: 00_Intro.ipynb  01_Scraping Basics.ipynb  02_Redirect and other odities.ipynb  03_Integration.ipynb  LICENSE  README.md  pyproject.toml
