[tool.poetry]
name = "lookyloo-tutorial"
version = "0.1.0"
description = "A developer-oriented tutorial to understand what lookyloo is for"
authors = ["Raphaël Vinot <raphael@lookyloo.eu>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.7"
pylookyloo = "^1.21.1"
pymisp = {version = "^2.4.176", extras = ["email", "fileobjects", "url"]}
pyphishtanklookup = "^1.3.1"
pypandora = "^1.6.0"
pylacus = "^1.6.2"
lacuscore = "^1.6.13"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.1"]
build-backend = "poetry.core.masonry.api"
