[tool.poetry]
name = "lookyloo-tutorial"
version = "0.1.0"
description = "A developer-oriented tutorial to understand what lookyloo is for"
authors = ["Raphaël Vinot <raphael@lookyloo.eu>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.1.1"
pylookyloo = "^1.23.1"
pymisp = {version = "^2.4.184.3", extras = ["email", "fileobjects", "url"]}
pyphishtanklookup = "^1.3.2"
pypandora = "^1.8.0"
pylacus = "^1.8.0"
lacuscore = "^1.8.3"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.1"]
build-backend = "poetry.core.masonry.api"
